--- a/style.css
+++ b/style.css
@@ -61,7 +61,9 @@ body {
 /*--Header Section End--*/
 
 
-
+/*----------     Donate section Start     --------*/
+/*----------     Donate section Start     --------*/
+/*----------     Donate section Start     --------*/
 
 .donate_section {
     width: 60%;
@@ -81,7 +83,7 @@ body {
     color: gray;
 }
 
-
+/*-- Donate Section Amount Option ---*/
 .dollar_amount {
     display: flex;
     width: 100%;
@@ -130,3 +132,6 @@ body {
     margin-left: 42.5%;
 }
 
+/*----------     Donate section End     --------*/
+/*----------     Donate section End     --------*/
+/*----------     Donate section End     --------*/
