--- a/style.css
+++ b/style.css
@@ -108,15 +108,15 @@ body {
 .color_amount h3 {
     color: red;
 }
-.amount_write h4 {
-    color: gray;
+.amount_input input{
     text-align: center;
-    font-size: 20px;
-    font-weight: 500;
-    margin-bottom: -2px;
-}
-.amount_write hr {
+    border: none;
+    width: 60%;
+    margin-left: 15%;
+    padding: 20px 50px;
     color: gray;
+    font-size: 20px;
+    border-bottom: 2px solid gray;
     margin-bottom: 40px;
 }
 .amount_write a {
